--- a/src/main/resources/templates/photos/list.html
+++ b/src/main/resources/templates/photos/list.html
@@ -6,8 +6,32 @@
 <nav th:replace="~{/fragments/navbar :: navbar(current='photos')}"></nav>
 <h1>Photo List</h1>
 <div class="container">
+    <!--    per messaggio di avvenuta cancellazione-->
 
-    <table class="table" th:if="${photoList.size()>0}">
+    <div th:if="${message != null}" class="alert  alert-dismissible fade show"
+         th:classAppend="${#strings.equalsIgnoreCase(message.type, 'SUCCESS')} ? 'alert-success' : 'alert-danger'">
+        <div th:text="${message.message}"></div>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+    </div>
+    <div class="d-flex justify-content-between align-items-center my-3">
+        <a class="btn btn-primary" th:href="@{/pizzas/create}">Add photo</a>
+
+        <div>
+            <form th:action="@{/photos}" method="GET">
+
+                <div class="input-group ">
+                    <input type="search" class="form-control" placeholder="Search by name" name="keyword"
+                           th:value="${searchInput}">
+                    <button class="btn btn-outline-secondary" type="submit"><i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
+
+            </form>
+        </div>
+    </div>
+
+    <table class="table" th:if="${photosList.size()>0}">
         <thead>
         <tr>
             <th scope="col">#</th>
@@ -21,7 +45,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="photo : ${photoList}">
+        <tr th:each="photo : ${photosList}">
             <td th:text="${photo.id}"></td>
             <td th:text="${photo.title}"></td>
             <td th:text="${photo.description}"></td>
@@ -32,7 +56,7 @@
                     <a class="btn btn-primary"
                        th:href="@{|/photos/${photo.id}|}"><i
                             class="  fa-solid fa-circle-info"></i></a>
-                    <a class="btn btn-primary " sec:authorize="hasAuthority('ADMIN')"
+                    <a class="btn btn-primary "
                        th:href="@{|/photos/edit/${photo.id}|}"><i
                             class="fa-solid fa-pen-to-square"></i></a>
                     <form th:action="@{|/photos/delete/${photo.id}|}"
@@ -44,6 +68,8 @@
         </tr>
         </tbody>
     </table>
+
+    <div class="alert alert-info" th:unless="${photosList.size()>0}">The list is empty</div>
 
 </div>
 </body>
