--- a/src/main/resources/templates/photos/list.html
+++ b/src/main/resources/templates/photos/list.html
@@ -15,7 +15,7 @@
 
     </div>
     <div class="d-flex justify-content-between align-items-center my-3">
-        <a class="btn btn-primary" th:href="@{/pizzas/create}">Add photo</a>
+        <a class="btn btn-primary" th:href="@{/photos/create}">Add photo</a>
 
         <div>
             <form th:action="@{/photos}" method="GET">
