--- a/src/main/resources/templates/photos/list.html
+++ b/src/main/resources/templates/photos/list.html
@@ -14,7 +14,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 
     </div>
-    <div class="d-flex justify-content-between align-items-center my-3">
+    <div sec:authorize="hasAuthority('ADMIN')" class="d-flex justify-content-between align-items-center my-3">
         <a class="btn btn-primary" th:href="@{/photos/create}">Add photo</a>
 
         <div>
@@ -56,10 +56,10 @@
                     <a class="btn btn-primary"
                        th:href="@{|/photos/${photo.id}|}"><i
                             class="  fa-solid fa-circle-info"></i></a>
-                    <a class="btn btn-primary "
+                    <a sec:authorize="hasAuthority('ADMIN')" class="btn btn-primary "
                        th:href="@{|/photos/edit/${photo.id}|}"><i
                             class="fa-solid fa-pen-to-square"></i></a>
-                    <form th:action="@{|/photos/delete/${photo.id}|}"
+                    <form sec:authorize="hasAuthority('ADMIN')" th:action="@{|/photos/delete/${photo.id}|}"
                           method="post">
                         <button class=" btn btn-danger" type="submit"><i class="fa-regular fa-trash-can"></i></button>
                     </form>
