--- a/src/main/resources/templates/messages/index.html
+++ b/src/main/resources/templates/messages/index.html
@@ -25,8 +25,12 @@
                 <button class="btn btn-primary" type="submit"><i class="fa-solid fa-trash-can"></i>
                 </button>
             </form>
+            
         </li>
     </ul>
+    <div class="alert alert-info" th:unless="${messagesList.size > 0}">
+        There are no messages
+    </div>
 
 
 </div>
